--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 flyway.enabled=true
 flyway.locations=classpath:db/migration
 
+jwt.secret: "dGhpc3Nob3VsZGJlYXRsZWFzdDMyY2hhcnMjJC41NDM0MzIzJSUlJQ=="
