chore: add documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ flyway.enabled=true
 flyway.locations=classpath:db/migration
 
 jwt.secret: "dGhpc3Nob3VsZGJlYXRsZWFzdDMyY2hhcnMjJC41NDM0MzIzJSUlJQ=="
+springdoc.swagger-ui.operationsSorter=method
