--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=candidate-management
 server.port=8091
-spring.datasource.url=jdbc:mysql://localhost:3307/candidate_db
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3307}/${DATABASE_NAME:candidate_db}
+spring.datasource.username=${DATABASE_USER:user}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 flyway.enabled=true
